--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,3 +47,13 @@ main {
     display: block;
     margin: 20px;
 }
+
+.correct-wrong-info {
+    color: #9e9e9e;
+    font-style: italic;
+    border-top: 3px solid;
+}
+
+.hidden-elt {
+    display: none;
+}
